Allow WidescreenShowList on >=1200px wide screens. Fix overlapping hostnames in ShowCard.

--- a/src/components/ShowCard/ShowCard.scss
+++ b/src/components/ShowCard/ShowCard.scss
@@ -67,6 +67,8 @@
         align-items: flex-end;
         
         .ShowCard-hosts {
+          max-width: 400px;
+          text-align: right;
           font-size: .8rem;
           font-weight: 600;
           border-radius: 3px;
