--- a/src/components/ShowList/ShowList.scss
+++ b/src/components/ShowList/ShowList.scss
@@ -75,7 +75,7 @@
   }
 
   &-widescreenButton {
-    @media (max-width: 1400px), (max-device-width: 1400px) {
+    @media (max-width: 1200px), (max-device-width: 1200px) {
       display: none;
     }
   }
@@ -116,6 +116,10 @@
       font-size: 0.9rem;
       width: 100%;
       line-height: 1.2;
+
+      @media (max-width: 1400px), (max-device-width: 1400px) {
+        font-size: 12.5px;
+      }
     }
 
     &.color-night {
@@ -141,7 +145,6 @@
   &-widescreen {
     display: flex;
     max-width: 100%;
-
   }
   
   &-timestampContainer {
